@@ -1,0 +1,27 @@
+name: Build Wheels
+
+on: [push, pull_request]
+
+jobs:
+  build_wheels:
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, windows-2019, macos-10.15]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: build wheels
+        uses: pypa/cibuildwheel@v2.1.1
+        env:
+          CIBW_ARCHS_MACOS: "x86_64 universal2 arm64"
+          CIBW_PRERELEASE_PYTHONS: False
+          CIBW_SKIP: cp310-* pp*
+          CIBW_TEST_COMMAND: python -c "from refnx.reflect import available_backends; b = available_backends(); assert 'c' in b"
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: refnx-wheels
+          path: ./wheelhouse/*.whl
