@@ -1,3 +1,6 @@
 [build-system]
-requires = [ "setuptools", "cython", "wheel", "numpy"]
+requires = [ "setuptools", "cython", "wheel", "numpy", "oldest-supported-numpy"]
 build-backend = "setuptools.build_meta"
+
+[project]
+requires-python = ">=3.7"
