@@ -379,3 +379,4 @@ in 0.1.13.
   versions as well as the oldest version supported on a given Python version.
   Previously refnx wheels were built with the newest numpy available at
   build time, and were probably not compatible with older numpy versions.
+- Rejig the build process to make macOS universal wheels.
